--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "url": "taskList"
   },
   "author": "Himan Shavaleh",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4"
+  }
 }
